fix(material-experimental/mdc-slide-toggle): strong focus indication not visible (#19048)
In #18895 a `border-radius: 50%` was added to the ripple host element of the MDC-based slide toggle in order to support different densities. The problem is that the ripple element is also used to draw a rectangle in strong focus indication mode. These changes move the strong focus indication to the `.mdc-switch__thumb-underlay` and switch the base focus indication to use `::after` instead of `::before`.

--- a/src/material-experimental/mdc-slide-toggle/_slide-toggle-theme.scss
+++ b/src/material-experimental/mdc-slide-toggle/_slide-toggle-theme.scss
@@ -30,7 +30,7 @@
     // MDC's switch doesn't support a `color` property. We add support
     // for it by adding a CSS class for accent and warn style.
     .mat-mdc-slide-toggle {
-      .mdc-switch__thumb-underlay::before, .mat-ripple-element {
+      .mdc-switch__thumb-underlay::after, .mat-ripple-element {
         background: $mdc-switch-toggled-off-ripple-color;
       }
 
@@ -51,18 +51,18 @@
 
     // The ripple color matches the palette only when it's checked.
     .mat-mdc-slide-toggle-checked {
-      .mdc-switch__thumb-underlay::before, .mat-ripple-element {
+      .mdc-switch__thumb-underlay::after, .mat-ripple-element {
         background: $primary;
       }
 
       &.mat-accent {
-        .mdc-switch__thumb-underlay::before, .mat-ripple-element {
+        .mdc-switch__thumb-underlay::after, .mat-ripple-element {
           background: $accent;
         }
       }
 
       &.mat-warn {
-        .mdc-switch__thumb-underlay::before, .mat-ripple-element {
+        .mdc-switch__thumb-underlay::after, .mat-ripple-element {
           background: $warn;
         }
       }
